--- a/App/src/app/shared/models/donation-history/donation-history.component.html
+++ b/App/src/app/shared/models/donation-history/donation-history.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content>
   <ion-accordion-group value="first" class="ion-padding">
-    <ion-accordion value="first" *ngIf="!data.bloodRequest">
+    <ion-accordion value="first">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
         <ion-label class="ion-padding-horizontal">Blood Bank Details</ion-label>
