--- a/App/src/app/layout/pages/admin/history/history/history.page.html
+++ b/App/src/app/layout/pages/admin/history/history/history.page.html
@@ -9,43 +9,10 @@
 </ion-header>
 <ion-content>
   <ion-accordion-group value="first" class="ion-padding">
-    <ion-accordion value="first" *ngIf="!data.bloodRequest">
-      <ion-item slot="header" color="light">
-        <i class="fa-solid fa-file-lines"></i>
-        <ion-label class="ion-padding-horizontal">Blood Bank Details</ion-label>
-      </ion-item>
-      <div class="ion-padding accordion-collapsed" slot="content">
-        <ion-card>
-          <ion-card-content>
-            <ion-grid>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Blood Bank Name </ion-label>
-                  <ion-label> : {{data?.bloodBankName}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Location </ion-label>
-                  <ion-label> : {{data?.location}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Donation Date </ion-label>
-                  <ion-label> : {{data?.donationDate}}</ion-label>
-                </ion-col>
-              </ion-row>
-             
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-      </div>
-    </ion-accordion>
-    <ion-accordion value="second" *ngIf="!!data.bloodRequest">
+    <ion-accordion value="first" *ngIf="!!data.bloodRequest">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-droplet"></i>
-        <ion-label  class="ion-padding-horizontal">Beneficiary</ion-label>
+        <ion-label  class="ion-padding-horizontal">Request Details</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -93,7 +60,7 @@
                   <ion-label>: {{data?.bloodRequest?.city}}</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row *ngIf="data.gender =='FEMALE'">
                 <ion-col size="12">
                   <ion-label class="head">Father/Husband</ion-label>
                   <ion-label>: {{data?.bloodRequest?.fatherOrHusband}}</ion-label>
@@ -135,6 +102,41 @@
         </ion-card>
       </div>
     </ion-accordion>
+
+    <ion-accordion value="second" *ngIf="!data.bloodRequest">
+      <ion-item slot="header" color="light">
+        <i class="fa-solid fa-file-lines"></i>
+        <ion-label class="ion-padding-horizontal">Request Details</ion-label>
+      </ion-item>
+      <div class="ion-padding accordion-collapsed" slot="content">
+        <ion-card>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Blood Bank Name </ion-label>
+                  <ion-label> : {{data?.bloodBankName}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Location </ion-label>
+                  <ion-label> : {{data?.location}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Donation Date </ion-label>
+                  <ion-label> : {{data?.donationDate}}</ion-label>
+                </ion-col>
+              </ion-row>
+             
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </ion-accordion>
+   
     <ion-accordion value="third">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-user"></i>
