--- a/website/src/app/features/landing-layout/components/footer/footer.component.scss
+++ b/website/src/app/features/landing-layout/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 // Footer
 .container-fluid {
   color: #ccc;
-  background-color: #010101;
+  background-color: #7c6d6d;
   .container {
     padding: 20px;
     .head {
