--- a/website/src/app/features/donateblood/donateblood.component.scss
+++ b/website/src/app/features/donateblood/donateblood.component.scss
@@ -62,6 +62,54 @@
       border: 2px solid #000;
       border-radius: 8px;
     }
+
+    .selectBox {
+      position: relative;
+      width: 250px;
+      margin-bottom: 2rem;
+
+      select {
+        width: 100%;
+        padding: 10px;
+        outline: none;
+        border: none;
+        color: #000;
+        font-size: 1em;
+        background: transparent;
+        border-left: 2px solid #000;
+        border-bottom: 2px solid #000;
+        transition: 0.1s;
+        border-bottom-left-radius: 8px;
+
+        &:valid ~ span,
+        &:focus ~ span {
+          transform: translateX(113px) translateY(-60px);
+          font-size: 10px;
+          background: #000;
+          color: #fff;
+          border: 2px;
+        }
+
+        &:valid,
+        &:focus {
+          border: 2px solid #000;
+          border-radius: 8px;
+        }
+      }
+      span {
+        position: absolute;
+        left: 0;
+        transform: translateY(-40px);
+        margin-left: 10px;
+        padding: 10px;
+        pointer-events: none;
+        font-size: 12px;
+        color: #000;
+        text-transform: uppercase;
+        transition: 0.5s;
+        border-radius: 8px;
+      }
+    }
   }
 
   .submit {
@@ -83,43 +131,216 @@
 
 @media (max-width: 1225px) {
   .container {
-    .col-6 {
-      .img-fluid {
-        margin: 1rem;
-      }
+    .img-fluid {
+      margin-top: 5rem;
+      height: 20rem;
+      width: 30rem;
     }
 
-    .col-6 {
-      .container {
-        .inputBox {
-          width: 200px;
-          margin-bottom: 2rem;
-        }
-        .inputBox input {
+    .container {
+      .inputBox {
+        width: 200px;
+        margin-bottom: 2rem;
+      }
+      .inputBox input {
+        padding: 10px;
+        font-size: 14px;
+        border-bottom-left-radius: 8px;
+      }
+
+      .inputBox span {
+        font-size: 12px;
+        border-radius: 8px;
+      }
+
+      .inputBox input:valid ~ span,
+      .inputBox input:focus ~ span {
+        font-size: 10px;
+        border: 2px;
+        padding: 5px;
+      }
+
+      .selectBox {
+        width: 200px;
+        margin-bottom: 2rem;
+
+        select {
           padding: 10px;
           font-size: 14px;
           border-bottom-left-radius: 8px;
-        }
 
-        .inputBox span {
+          &:valid ~ span,
+          &:focus ~ span {
+            font-size: 10px;
+            border: 2px;
+            padding: 5px;
+          }
+        }
+        span {
           font-size: 12px;
           border-radius: 8px;
         }
-
-        .inputBox input:valid ~ span,
-        .inputBox input:focus ~ span {
-          font-size: 10px;
-          border: 2px;
-          padding: 5px;
-        }
       }
     }
+
     .submit {
       .button {
         margin-top: -2rem;
         width: 15rem;
         font-family: "Helvetica";
         font-size: 20px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
+@media (max-width: 1225px) {
+  .container {
+    .img-fluid {
+      margin-top: 5rem;
+      height: 15rem;
+      width: 20rem;
+    }
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    .head {
+      font-size: 40px;
+      margin-top: 2rem;
+    }
+    .img-fluid {
+      margin-left: 2rem;
+      margin-top: 0;
+      margin-bottom: 0;
+      height: 15rem;
+      width: 20rem;
+    }
+
+    .container {
+      margin-top: 0;
+      .inputBox {
+        width: 300px;
+        margin-bottom: 2rem;
+        margin-left: 1.5rem;
+      }
+      .inputBox input {
+        padding: 10px;
+        font-size: 14px;
+        border-bottom-left-radius: 8px;
+      }
+
+      .inputBox span {
+        font-size: 12px;
+        border-radius: 8px;
+      }
+
+      .inputBox input:valid ~ span,
+      .inputBox input:focus ~ span {
+        font-size: 10px;
+        border: 2px;
+        padding: 5px;
+      }
+
+      .selectBox {
+        width: 300px;
+        margin-bottom: 2rem;
+        margin-left: 1.5rem;
+
+        select {
+          padding: 10px;
+          font-size: 14px;
+          border-bottom-left-radius: 8px;
+
+          &:valid ~ span,
+          &:focus ~ span {
+            font-size: 10px;
+            border: 2px;
+            padding: 5px;
+          }
+        }
+        span {
+          font-size: 12px;
+          border-radius: 8px;
+        }
+      }
+    }
+    .submit {
+      .button {
+        margin-top: -2rem;
+        width: 10rem;
+        font-family: "Helvetica";
+        font-size: 15px;
+        border-radius: 10px;
+      }
+    }
+  }
+}
+@media (max-width: 380px) {
+  .container {
+    .head {
+      font-size: 35px;
+      margin-top: 2rem;
+    }
+    .img-fluid {
+      margin: 0;
+      margin-left: 1.5rem;
+      height: 10rem;
+      width: 15rem;
+    }
+    .container {
+      margin-top: 0;
+      .inputBox {
+        width: 250px;
+        margin-bottom: 1rem;
+        margin-left: 0rem;
+      }
+      .inputBox input {
+        padding: 10px;
+        font-size: 10px;
+        border-bottom-left-radius: 8px;
+      }
+
+      .inputBox span {
+        font-size: 10px;
+        border-radius: 8px;
+      }
+
+      .inputBox input:valid ~ span,
+      .inputBox input:focus ~ span {
+        font-size: 9px;
+        border: 2px;
+        padding: 5px;
+      }
+      .selectBox {
+        width: 250px;
+        margin-bottom: 1rem;
+        margin-left: 0rem;
+
+        select {
+          padding: 10px;
+          font-size: 10px;
+          border-bottom-left-radius: 8px;
+
+          &:valid ~ span,
+          &:focus ~ span {
+            font-size: 9px;
+            border: 2px;
+            padding: 5px;
+          }
+        }
+        span {
+          font-size: 10px;
+          border-radius: 8px;
+        }
+      }
+    }
+    .submit {
+      .button {
+        margin-top: -2rem;
+        width: 10rem;
+        font-family: "Helvetica";
+        font-size: 15px;
         border-radius: 10px;
       }
     }
