--- a/website/src/app/features/landing-layout/landing-layout.component.html
+++ b/website/src/app/features/landing-layout/landing-layout.component.html
@@ -74,13 +74,13 @@
         </div>
       </div>
       <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12">
-        <img src="../../../assets/about img.jpg" class="img" />
+        <img src="../../../assets/gallery/aboutclip-removebg-preview.png" class="img" />
       </div>
     </div>
 
     <div class="row">
       <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12">
-        <img src="../../../assets/gallery/4jpeg.jpeg" class="img2" />
+        <img src="../../../assets/gallery/requestclip-removebg-preview.png" class="img2" />
       </div>
 
       <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12 text">
@@ -121,27 +121,27 @@
       </div>
       <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 img">
         <img
-          src="../../../assets/gallery/1jpeg.jpeg"
+          src="../../../assets/gallery/2jpeg.jpeg"
           class="img-fluid w-100"
           alt=""
         />
       </div>
       <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 img">
         <img
-          src="../../../assets/gallery/1jpeg.jpeg"
+          src="../../../assets/gallery/3jpeg.jpeg"
           class="img-fluid w-100"
           alt=""
         />
       </div>
       <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 img">
         <img
-          src="../../../assets/gallery/1jpeg.jpeg"
+          src="../../../assets/gallery/4jpeg.jpeg"
           class="img-fluid w-100"
           alt=""
         />
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
     <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 img">
         <img
           src="../../../assets/gallery/1jpeg.jpeg"
@@ -170,6 +170,10 @@
           alt=""
         />
       </div>
-    </div>
+    </div> -->
   </div>
+</section>
+
+<section id="footer">
+
 </section>
