--- a/admin_panel/src/app/layout/advertise/form/form.component.scss
+++ b/admin_panel/src/app/layout/advertise/form/form.component.scss
@@ -47,3 +47,9 @@ input[type=file]::file-selector-button {
     text-align: center;
     transition: color .2s ease-in-out;
   }
+  #img{
+width: 500px;
+height: 230px;
+padding-left: 100px;
+  }
+  
