--- a/admin_panel/src/app/layout/donate/donate-form/donate-form.component.html
+++ b/admin_panel/src/app/layout/donate/donate-form/donate-form.component.html
@@ -195,9 +195,9 @@
             <div class="col-6">
               <div class="mb-3">
                 <label for="" class="form-label">
-                    Blood Bank Name
+                    Gender
                 </label>
-                <input type="text" class="form-control" formControlName="bloodBankName">
+                <input type="text" class="form-control" formControlName="gender">
               </div>
             </div>
             <div class="col-6">
@@ -211,21 +211,21 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <div class="mb-3">
+              <!-- <div class="mb-3">
                 <label for="" class="form-label">
                     Donate Date
                 </label>
                 <input type="text" class="form-control" formControlName="donationDate">
-              </div>
+              </div> -->
             </div>
-            <div class="col-6">
+            <!-- <div class="col-6">
               <div class="mb-3">
                 <label for="" class="form-label">
                     Gender
                 </label>
                 <input type="text" class="form-control" formControlName="gender">
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-6">
@@ -236,14 +236,14 @@
                 <input type="text" class="form-control" formControlName="status">
               </div>
             </div>
-            <div class="col-6">
+            <!-- <div class="col-6">
               <div class="mb-3">
                 <label for="" class="form-label">
                     Location
                 </label>
                 <input type="text" class="form-control" formControlName="location">
               </div>
-            </div>
+            </div> -->
            
           </div>
           <div class="row">
@@ -519,4 +519,3 @@
       </div>
     </div>
   </div>
-
