--- a/admin_panel/src/app/layout/blood-request/list/list.component.html
+++ b/admin_panel/src/app/layout/blood-request/list/list.component.html
@@ -70,24 +70,25 @@
             <thead class="table-primary">
               <tr>
                 <th>Sr.No</th>
-                <th>Name</th>
+                <th>Attender</th>
+                <th>Beneficiary Name</th>
                 <th>Blood Group</th>
-                <th>Mobile No.</th>
+                <th>Admin Name</th>
                 <th>Status</th>
                 <th>Created At</th>
                 <th>Action</th>
-
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let u of users; let i = index">
                 <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
+                <td>{{ u?.attender?.firstName }}</td>
                 <td>{{ u.name }}</td>
                 <td>{{ u.bloodGroup }}</td>
-
-                <td>{{ u.mobileNo }}</td>
+                <td>{{u?.acceptor?.firstName}}</td>
                 <td>{{ u.status }}</td>
                 <td>{{ u.createdAt }}</td>
+                <!-- <td>{{u?.acceptor?.firstName}}</td> -->
                 <td>
                     <button
                       (click)="navigateTo('/blood-request/blood-request-form', u.id)"
