--- a/admin_panel/src/app/layout/donate/list/list.component.html
+++ b/admin_panel/src/app/layout/donate/list/list.component.html
@@ -69,7 +69,7 @@
           <thead class="table-primary">
             <tr>
               <th>Sr.No</th>
-              <th>Name</th>
+              <th>Doner Name</th>
               <th>Blood Group</th>
               <th>Mobile No.</th>
               <th>Status</th>
@@ -107,3 +107,5 @@
     </div>
   </div>
 </div>
+
+
