--- a/admin_panel/src/app/layout/users/user-list/user-list.component.html
+++ b/admin_panel/src/app/layout/users/user-list/user-list.component.html
@@ -117,7 +117,7 @@
                   class="btn btn-sm btn-outline-success me-1"
                   ngbTooltip="Edit User"
                 >
-                  <i class="fa fa-pencil me-1"></i> Edit
+                  <i class="fa fa-pencil me-1"></i>
                 </button>
                 <button
                   class="btn btn-sm btn-outline-danger"
@@ -126,8 +126,15 @@
                   (click)="open(u, alertMsg)"
                   ngbTooltip="Delete User"
                 >
-                  <i class="fa fa-trash me-1"></i> delete
+                  <i class="fa fa-trash me-1"></i>
                 </button>
+                <button
+                (click)="navigateTo('/users/users-form', u.id)"
+                class="btn btn-sm btn-outline-success me-1"
+                ngbTooltip="View User"
+              >
+                <i class="fa fa-eye me-1"></i>
+              </button>
               </td>
             </tr>
           </tbody>
