--- a/website/src/app/features/landing-layout/landing-layout.component.html
+++ b/website/src/app/features/landing-layout/landing-layout.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <img
           class="img-fluid"
-          src="../../../assets/gallery/main.jpg"
+          src="../../../assets/gallery/landing.jpg"
           alt=""
           class="landing-img w-100"
         />
@@ -58,7 +58,7 @@
 <section class="about" id="about">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12 text">
+      <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12 text ">
         <div class="head text-center">About Us</div>
         <div class="body-text">
           Our member organizations operate more than 600 blood collection sites
@@ -73,17 +73,17 @@
           or surgery,
         </div>
       </div>
-      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 ">
         <img src="../../../assets/gallery/aboutclip-removebg-preview.png" class="img" />
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12">
+      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 order-xs-2">
         <img src="../../../assets/gallery/requestclip-removebg-preview.png" class="img2" />
       </div>
 
-      <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12 text">
+      <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12  order-xs-1 text">
         <div class="head text-center">Why Should Donate Blood ?</div>
         <div class="body-text">
           Blood is the most precious gift that anyone can give to another person
