--- a/website/src/app/features/landing-layout/landing-layout.component.scss
+++ b/website/src/app/features/landing-layout/landing-layout.component.scss
@@ -9,14 +9,14 @@
 
 .count {
   // background-color: #f5ebeb;
-  background-color: #c00606;
+  background-color: #fff4f0;
   .container-fluid {
     justify-content: center;
     padding: 0rem 6rem;
     margin-bottom: -4rem;
 
     .card {
-      margin-top: 2rem;
+      // margin-top: 2rem;
       margin-left: 3rem;
       padding: 1rem;
       width: 200px;
