slider of onbording and home

--- a/App/src/app/layout/pages/home/home.page.html
+++ b/App/src/app/layout/pages/home/home.page.html
@@ -55,7 +55,7 @@
     </ion-grid>
   </ion-item>
 
-  <swiper-container speed="500" loop="true">
+  <swiper-container [slidesPerView]="1" [Option]="Option" [speed]="400" [loop]="true" [pagination]="true">
     <swiper-slide>
       <img class="slide-img" src="../../../../assets/ad1.png" alt="" />
     </swiper-slide>
