--- a/App/src/app/auth/onboarding/onboarding.page.html
+++ b/App/src/app/auth/onboarding/onboarding.page.html
@@ -1,44 +1,15 @@
-<!-- <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>onboarding</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
-<!-- <ion-content [fullscreen]="true" class="slider">
-  <swiper-container speed="500" loop="true">
+<ion-content [fullscreen]="true" class="slider">
+  <swiper-container [slidesPerView]="1" [Option]="Option" [speed]="400" [loop]="true" [pagination]="true">
     <swiper-slide>
-      <img src="../../../../assets/onbording/1.png" alt="">
+      <img src="../../../../assets/onbording/1.png" alt="" />
     </swiper-slide>
     <swiper-slide>
-      <img src="../../../../assets/onbording/2.png" alt="">
+      <img src="../../../../assets/onbording/2.png" alt="" />
     </swiper-slide>
     <swiper-slide>
-      <img src="../../../../assets/onbording/3.png" alt="">
-      <ion-button class="top-right" routerLink="/auth/login"> SKIP</ion-button>
+      <img src="../../../../assets/onbording/3.png" alt="" />
+      <ion-button class="bottom-right" routerLink="/auth/login"> SKIP</ion-button>
     </swiper-slide>
   </swiper-container>
-</ion-content> -->
+</ion-content>
 
-
-<!-- <div class="ion-padding ion-margin-bottom">
-  <ion-slides #slider [options]="eventSlideOpts" [pager]="true">
-    <ion-slide>
-      <img src="../../../../assets/onbording/1.png" alt="">
-    </ion-slide>
-    <ion-slide>
-      <img src="../../../../assets/onbording/2.png" alt="">
-    </ion-slide>
-    <ion-slide>
-      <img src="../../../../assets/onbording/3.png" alt="">
-    </ion-slide>
-  </ion-slides>
-  </div> -->
-
-<!-- <div class="ion-padding ion-margin-bottom">
-  <ion-slides #slider [options]="eventSlideOpts" [pager]="true">
-    <ion-slide *ngFor="let item of dataList" (click)="navigateTo(item.event?._id)">
-      <img class="horizontal-event-img" [src]="item.event?.eventMedia[0]?.image" />
-    </ion-slide>
-  </ion-slides>
-  </div> -->
-<!-- http://localhost:8100/layout/onboarding -->
