--- a/App/src/app/auth/onboarding/onboarding.page.scss
+++ b/App/src/app/auth/onboarding/onboarding.page.scss
@@ -1,11 +1,11 @@
 .slider{
     img{
         width: 100vw;
-        height: 91vh;
+        height: 100vh;
     }
-    .top-right {
+    .bottom-right {
         position: absolute;
-        top: 8px;
+        bottom: 8px;
         right: 16px;
       }
 }
