--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -41,7 +41,7 @@
                   <ion-row>
                     <ion-col size="12">
                       <ion-label class="head">Donation Date </ion-label>
-                      <ion-label> : {{data?.donationDate}}</ion-label>
+                      <ion-label> : {{data?.donationDate | date}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
@@ -115,7 +115,7 @@
                       >
                       <ion-item fill="outline">
                         <p class="ion-margin-end">
-                          {{f['donationDate'].value | date}}
+                          {{f['donationDate'].value}}
                         </p>
                         <ion-icon
                           slot="end"
@@ -343,10 +343,7 @@
                     <ion-label> : {{data?.donationDate}}</ion-label>
                   </ion-col>
 
-                  <ion-col size="12">
-                    <ion-label class="head">Location</ion-label>
-                    <ion-label> : {{data?.location}}</ion-label>
-                  </ion-col>
+          
                 </ion-row>
               </ion-grid>
             </ion-card-content>
